--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -14,6 +14,12 @@
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,153,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
+        <Label x:Name="label" HorizontalAlignment="Left" Margin="48,215,0,0" VerticalAlignment="Top" Height="64" Width="139">
+            <TextBlock TextWrapping="WrapWithOverflow">
+                Total Charge after adding the delivery charge ($25):
+            </TextBlock>
+        </Label>
+        <TextBlock x:Name="txtFinalCharge"  HorizontalAlignment="Left" Margin="216,227,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
 
 
     </Grid>
