--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -14,12 +14,18 @@
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,153,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
-        <Label x:Name="label" HorizontalAlignment="Left" Margin="48,215,0,0" VerticalAlignment="Top" Height="64" Width="139">
+        <Label x:Name="label" HorizontalAlignment="Left" Margin="48,202,0,0" VerticalAlignment="Top" Height="64" Width="139">
             <TextBlock TextWrapping="WrapWithOverflow">
                 Total Charge after adding the delivery charge ($25):
             </TextBlock>
         </Label>
-        <TextBlock x:Name="txtFinalCharge"  HorizontalAlignment="Left" Margin="216,227,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBlock x:Name="txtFinalCharge"  HorizontalAlignment="Left" Margin="202,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="79"/>
+        <Label x:Name="lblWrapCost" HorizontalAlignment="Left" Margin="47,256,0,0" VerticalAlignment="Top" Width="121">
+            <TextBlock TextWrapping="WrapWithOverflow">
+                Total Charge After adding the wrap charge $5
+            </TextBlock>
+        </Label>
+        <TextBlock x:Name="txtWrapCost" HorizontalAlignment="Left" Height="23" Margin="193,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
 
     </Grid>
