--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ProductApps.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="451.961" Width="525">
     <Grid>
         <Label Content="Product:" HorizontalAlignment="Left" Height="30" Margin="46,37,0,0" VerticalAlignment="Top" Width="61"/>
         <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="46,78,0,0" VerticalAlignment="Top" Width="61"/>
@@ -26,6 +26,12 @@
             </TextBlock>
         </Label>
         <TextBlock x:Name="txtWrapCost" HorizontalAlignment="Left" Height="23" Margin="193,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lblGST" HorizontalAlignment="Left" Margin="48,339,0,0" VerticalAlignment="Top" Height="48" Width="120">
+            <TextBlock TextWrapping="WrapWithOverflow">
+                Total Charge After GST (10%)
+            </TextBlock>
+        </Label>
+        <TextBlock x:Name="txtGST" HorizontalAlignment="Left" Margin="216,348,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="86"/>
 
 
     </Grid>
